initial commit with nav2 display launch

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-devel/
-logs/
+install/
+log/
 build/
+install/*
+log/*
+build/*
 bin/
 lib/
 msg_gen/
@@ -49,3 +52,4 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+.gitignore
