--- a/src/robot_description/CMakeLists.txt
+++ b/src/robot_description/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(ament_cmake REQUIRED)
 # find_package(<dependency> REQUIRED)
 
 install(
-  DIRECTORY src launch rviz config world
+  DIRECTORY src
   DESTINATION share/${PROJECT_NAME}
 )
 
