--- a/src/robot_bringup/CMakeLists.txt
+++ b/src/robot_bringup/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(ament_cmake REQUIRED)
 # find_package(<dependency> REQUIRED)
 
 install(
-  DIRECTORY config launch/ world rviz 
+  DIRECTORY config launch world rviz maps
   DESTINATION share/${PROJECT_NAME}
 )
 
