--- a/src/robot_bringup/config/ekf.yaml
+++ b/src/robot_bringup/config/ekf.yaml
@@ -16,7 +16,7 @@ ekf_filter_node:
         publish_acceleration: true
 
 # Whether to broadcast the transformation over the /tf topic. Defaults to true if unspecified.
-        publish_tf: false
+        publish_tf: true
         
 # 1. Set the map_frame, odom_frame, and base_link frames to the appropriate frame names for your system.
 #     1a. If your system does not have a map_frame, just remove it, and make sure "world_frame" is set to the value of odom_frame.
@@ -30,9 +30,9 @@ ekf_filter_node:
         map_frame: map              # Defaults to "map" if unspecified
         odom_frame: odom            # Defaults to "odom" if unspecified
         base_link_frame: base_link  # Defaults to "base_link" if unspecified
-        world_frame: odom           # Defaults to the value of odom_frame if unspecified
+        world_frame: odom         # Defaults to the value of odom_frame if unspecified
         
-        odom0: demo/odom
+        odom0: odom
         odom0_config: [true,  true,  true,
                        false, false, false,
                        false, false, false,
